supple module func
